@@ -61,8 +61,17 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/8.5.4"><strong>Version 8.5.4</strong></a>
 </p>
 <ul>
-    <li><span class="label label-warning">Bugfix</span> Failure authorizing using OAuth with no desktop browser installed (Linux) (<a
-            target="_blank" href="https://trac.cyberduck.io/ticket/14028">#14028</a>)
+    <li><span class="label label-warning">Bugfix</span> Failure authorizing using OAuth with no desktop browser
+        installed (Linux) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/14028">#14028</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Allow to create new buckets in regions ap-south-2,
+        ap-southeast-3, eu-south-2, eu-central-2, me-central-1 (S3) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/14045">#14045</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Allow custom path for IdentityAgent configuration (SFTP,
+        Windows) (<a
+                target="_blank" href="https://trac.cyberduck.io/ticket/13933">#13933)</a>
     </li>
 </ul>
 
