@@ -3,6 +3,8 @@ https://cyberduck.io/
 
 8.5.4
 - [Bugfix] Failure authorizing using OAuth with no desktop browser installed (Linux) (#14028)
+- [Bugfix] Allow to create new buckets in regions ap-south-2, ap-southeast-3, eu-south-2, eu-central-2, me-central-1 (S3) (#14045)
+- [Bugfix] Allow custom path for IdentityAgent configuration (SFTP, Windows) (#13933)
 
 8.5.3
 - [Bugfix] Failure uploading file with diacritic in filename (Windows) (#13723)
